--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 14.6
+Version: 14.7
 Tested up to: 6.6
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -525,4 +525,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 
 .wp-block-group .wp-block-preformatted a {
 	color: #ff5d20;
+}
+
+.wc-block-mini-cart__empty-cart-wrapper .wc-block-mini-cart__shopping-button:focus {
+	color: #fff;
 }
