--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 15.8
+Version: 15.9
 Tested up to: 6.7
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -568,4 +568,10 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 .has-background.post-navigation-link-next,
 .has-background.post-navigation-link-previous {
 	padding: 0.20em 1.325em;
+}
+
+.wc-block-cart__submit-button,
+.wc-block-cart__submit-button:hover,
+.wc-block-cart__submit-button:focus {
+	text-decoration: none;
 }
