--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 16.4
+Version: 16.5
 Tested up to: 6.7
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -595,4 +595,8 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
 .wc-block-mini-cart__footer .wc-block-mini-cart__footer-actions a {
 	font-size: 1.2rem;
 	text-decoration: none;
+}
+
+.wc-block-mini-cart__footer .wc-block-mini-cart__footer-actions a:hover {
+	text-decoration: underline;
 }
