--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 17.9
+Version: 18.0
 Tested up to: 6.7
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -652,4 +652,8 @@ a.wp-block-latest-posts__post-title {
 
 .wc-block-grid__products .wc-block-components-product-sale-badge.wc-block-grid__product-onsale {
 	line-height: 16px;
+}
+
+.wc-block-components-product-badge {
+    font-size: 1rem !important;
 }
