--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 20.2
+Version: 20.4
 Tested up to: 6.8
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -736,4 +736,13 @@ a.wp-block-latest-posts__post-title {
 
 .widget.widget_shopping_cart span a:before	{
 	display:none;
+}
+
+.wp-block-page-list a:hover,
+.wp-block-page-list a:focus {
+	color: inherit;
+}
+
+.wp-block-page-list a {
+	text-decoration: none;
 }
