--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 20.9
+Version: 21.0
 Tested up to: 6.8
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -758,4 +758,8 @@ a.wp-block-latest-posts__post-title {
 
 .wp-block-social-links .wp-social-link a {
 	box-shadow: none;
+}
+
+.wp-block-calendar table th {
+	font-weight: 600;
 }
