--- a/storely/style.css
+++ b/storely/style.css
@@ -4,7 +4,7 @@ Theme URI: https://sellerthemes.com/storely-free/
 Author: Seller Themes
 Author URI: https://sellerthemes.com/
 Description: Storely is a WooCommerce multipurpose WordPress theme designed for shopping online stores. Storely is suitable for eCommerce websites such as fashion, suit, sneaker, shoes, glasses, accessories, supermarket … or anything you want. The theme is built with lots of cool features and fully eCommerce functionalities in Pro version. Visit Storely pro demo. https://preview.sellerthemes.com/pro/storely
-Version: 22.3
+Version: 22.4
 Tested up to: 6.8
 Requires PHP: 5.6
 Requires at least: 4.7
@@ -812,4 +812,8 @@ a.wp-block-latest-posts__post-title {
 
 .sidebar .widget.widget_block .wp-block-group p {
 	padding: 0.78125rem 1.000rem 0.78125rem;
+}
+
+.footer-sidebar .widget.widget_block .wp-block-group p a {
+	color: inherit;
 }
